# hexagent-sdk

./: Cargo.toml  README.md
crates/hexagent-account/: Cargo.toml
crates/hexagent-account/src/: lib.rs
crates/hexagent-account/src/account/: mod.rs  order_manager.rs  orderbook.rs  position.rs
crates/hexagent-config/: Cargo.toml
crates/hexagent-config/src/: config.rs  lib.rs
crates/hexagent-engine/: Cargo.toml
crates/hexagent-engine/src/: engine.rs  lib.rs
crates/hexagent-exchange/: Cargo.toml
crates/hexagent-exchange/src/: index_price.rs  lib.rs
crates/hexagent-exchange/src/exchange/: mod.rs
crates/hexagent-exchange/src/exchange/aster/: auth.rs  info.rs  market.rs  mod.rs  position.rs  signer.rs  trade.rs  user_feed.rs
crates/hexagent-exchange/src/exchange/binance/: kline.rs  market.rs  mod.rs  trade.rs
crates/hexagent-exchange/src/exchange/bitget/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/bybit/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/chainlink/: market.rs  mod.rs  stream.rs
crates/hexagent-exchange/src/exchange/coinbase/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/gate/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/hexmarket/: auth.rs  market.rs  mod.rs  position.rs  trade.rs  user_feed.rs
crates/hexagent-exchange/src/exchange/hexmarket/sdk/: auth.rs  client.rs  mod.rs  types.rs
crates/hexagent-exchange/src/exchange/hyperliquid/: auth.rs  info.rs  market.rs  mod.rs  position.rs  signer.rs  trade.rs  user_feed.rs
crates/hexagent-exchange/src/exchange/kraken/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/kucoin/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/lighter/: auth.rs  info.rs  market.rs  mod.rs  position.rs  signer.rs  trade.rs  user_feed.rs
crates/hexagent-exchange/src/exchange/lighter/crypto/: ecgfp5.rs  gfp5.rs  goldilocks.rs  mod.rs  poseidon2.rs  schnorr.rs
crates/hexagent-exchange/src/exchange/mexc/: market.rs  mod.rs  proto.rs
crates/hexagent-exchange/src/exchange/okx/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/paper/: mod.rs  trade.rs
crates/hexagent-exchange/src/exchange/polymarket/: active_event.rs  approve_v2.rs  auth.rs  cli_account.rs  deploy_wallet.rs  deposit_wallet.rs  live_position.rs  market.rs  market_info.rs  market_info_v2.rs  merge.rs  migrate_usdc.rs  mod.rs  new_order.rs  new_orders.rs  onchain_tx.rs  platform_status.rs  position.rs  probe.rs  rtt_probe.rs  signer.rs  signer_v2.rs  trade.rs  user_feed.rs  wallet.rs
crates/hexagent-exchange/src/exchange/pyth/: market.rs  mod.rs
crates/hexagent-exchange/src/exchange/sim/: calib_source.rs  gpd.rs  latency.rs  latency_record_replay.rs  mod.rs  per_event_rtt.rs
crates/hexagent-exchange/src/exchange/sim_v2/: book.rs  clock.rs  event.rs  exchange.rs  feed.rs  latency.rs  mod.rs  simulator.rs  wallet.rs
crates/hexagent-exchange/src/recorder/: hist_reader.rs  mod.rs  reader.rs  writer.rs
crates/hexagent-exchange/tests/: aster_live_mainnet.rs  chainlink_rtds_mainnet.rs  hl_feeds_testnet.rs  hl_mainnet_fill.rs  hl_mainnet_reduce_only.rs  hl_mainnet_smoke.rs  hl_market_feed_mainnet.rs  hl_order_types_testnet.rs  lighter_feeds_public.rs  lighter_live_mainnet.rs  lighter_mainnet_fill.rs  poly_probe_mainnet.rs
crates/hexagent-runtime/: Cargo.toml
crates/hexagent-runtime/src/: async_rt.rs  http1_pool.rs  latency.rs  latency_record.rs  lib.rs  os_tune.rs
crates/hexagent-strategy/: Cargo.toml
crates/hexagent-strategy/src/: factory.rs  lib.rs  strategy.rs
crates/hexagent-types/: Cargo.toml
crates/hexagent-types/src/: lib.rs
crates/hexagent-types/src/types/: event.rs  instrument.rs  market.rs  mod.rs  order.rs
docs/: architecture.md
tools/lighter-katgen/: README.md  go.mod  main.go
