[package]
name = "hexagent-types"
version = "0.1.0"
edition = "2021"
description = "hexagent-sdk: shared trading-domain types (market events, signals, instruments, orders) + simulated clock."

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
